--- a/overlays/emea/kustomization.yaml
+++ b/overlays/emea/kustomization.yaml
@@ -1,2 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+resources:
+  - route-frontend.yaml
+
+bases:
+  - ../../base
+
+images:
+  - name: mysql
+    newName: registry.redhat.io/rhel8/mysql-80
+    newTag: 1-156
